--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,7 @@ insert_final_newline = true
 indent_style = space
 indent_size = 4
 
-[*.{sh,rb,js,yml,yaml,adoc}]
+[{*.{sh,rb,js,yml,yaml,adoc},configure}]
 indent_style = space
 indent_size = 2
 
